fix color contrast

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -637,13 +637,13 @@ video {
 /* links */
 
 main a,
-  footer a {
+  footer a :not(main) {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 :is(.dark main a),:is(.dark 
-  footer a) {
+  footer a :not(main)) {
   --tw-text-opacity: 1;
   color: rgb(96 165 250 / var(--tw-text-opacity));
 }
@@ -677,7 +677,7 @@ header a:hover {
   font-weight: 600;
   text-transform: uppercase;
   --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
+  color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
 :is(.dark #sidebar div.group-title) {
